--- a/src/components/inputSearch/inputSearch.css
+++ b/src/components/inputSearch/inputSearch.css
@@ -26,31 +26,24 @@ input {
   overflow: hidden;
   text-overflow: ellipsis;
   background: rgba(255, 255, 255, 0.7);
+  position: relative;
 }
 input:focus {
   border: 2px solid #cdd5c1;
-  outline: 2px solid white;
 }
-
-/* input:hover + button {
-  display: block;
-}
-input:focus + button {
-  display: block;
-} */
 
 input::placeholder {
-  color: #cdd5c1;
+  color: #999;
 }
 
 button {
   width: 200px;
   font-size: 18px;
   font-weight: 900;
-  color: #0d770dcc;
   position: absolute;
-  background: #cdd5c180;
+  background: rgba(205, 213, 193, 0.502);
   border: 1px solid #999;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
   top: 45px;
   left: 50%;
@@ -60,6 +53,9 @@ button {
 }
 button:active {
   opacity: 0.5;
+  box-shadow: none;
+  box-shadow: inset 3px 3px 5px rgba(0, 0, 0, 0.1),
+    1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 input[type="search"]::-webkit-search-decoration,
@@ -77,4 +73,20 @@ input[type="search"]::-webkit-calendar-picker-indicator {
   padding-left: 5px;
   padding-right: 0;
   color: #c43b3b;
+}
+
+input[type="search"]::-webkit-search-decoration {
+  display: none;
+  appearance: none;
+}
+
+@media screen and (max-width: 767px) {
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration,
+  input[type="search"]::-webkit-calendar-picker-indicator {
+    display: none;
+    appearance: none;
+  }
 }
