--- a/src/components/inputSearch/inputSearch.css
+++ b/src/components/inputSearch/inputSearch.css
@@ -30,6 +30,7 @@ input {
 }
 input:focus {
   border: 2px solid #cdd5c1;
+  outline: none;
 }
 
 input::placeholder {
@@ -81,12 +82,11 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 @media screen and (max-width: 767px) {
-  input[type="search"]::-webkit-search-decoration,
-  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-calendar-picker-indicator,
   input[type="search"]::-webkit-search-results-button,
-  input[type="search"]::-webkit-search-results-decoration,
-  input[type="search"]::-webkit-calendar-picker-indicator {
+  input[type="search"]::-webkit-search-results-decoration {
     display: none;
     appearance: none;
+    opacity: 0;
   }
 }
